This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

09-Feb-2004 (Lars Duening)  (3.3.669)
  - (object, simulate.c, backend.c) The list of destructed-but-referenced
      objects is scanned for deallocatable objects only when a flag
      signals that there actually are candidates. This should reduce
      the CPU load when destructed objects accumulate.
  - (mstrings, various files) Added statistics to check how much the
      shared string table actually helps performance. They are printed
      in the 'status tables' command.

07-Feb-2004 (Lars Duening)  (3.3.668)
  - (smalloc.c, slaballoc.c) The large block handler is now capable
      of handling blocks up to 2**32 words. This is especially useful
      on systems using malloc() instead of sbrk() for core memory
      allocation (reported by Menaures).
  - (efuns.c, smalloc.c, slaballoc.c) The extended malloc statistics
      are now separate from 'status malloc' in 'status malloc extstats'
      (Bug #0000358).

01-Feb-2004 (Lars Duening)  (3.3.667)
  - (pkg-mccp.c) In start_mccp_compress(), the interactive pointer
      was used before being set. I moved the set&check forward
       (Bug #0000361).
  - (pkg-tls.c) The success code passed to the TLS-handshake callback
      was incorrect: on success, it was passed as '1' instead of '0'
       (reported by Philipp).

31-Jan-2004 (Lars Duening)  (3.3.666)
  - (xalloc.c) Forgot to remove a fatal() used to debug slaballoc (Bug
       #0000359).
  - (slaballoc.c) Removed compiler warnings (Bug #0000358).
  - (mregex.c) Great - Kerberos has a function 'error_message()' in 
       a global include file (reported by Rajko).
  - (comm.c) Do not print the prompt to interactives which are currently
       negotiating a TLS handshake.
  - (pkg-tls.c) During the execution of a tls-init callback, the callback
       is protected against premature freeing.