@@ -54,21 +54,23 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 669)
-(Parent-Version lpmud 3-3 668)
+(Project-Version lpmud 3-3 670)
+(Parent-Version lpmud 3-3 669)
 (Version-Log "
-  - (object, simulate.c, backend.c) The list of destructed-but-referenced
-      objects is scanned for deallocatable objects only when a flag
-      signals that there actually are candidates. This should reduce
-      the CPU load when destructed objects accumulate.
-  - (mstrings, various files) Added statistics to check how much the
-      shared string table actually helps performance. They are printed
-      in the 'status tables' command.
+  - (mstrings.c) The extended string statistics didn't count the tabled
+      comparisons correctly.
+  - (lex.c) New macro __BOOT_TIME__ expands to the time() the driver
+      was booted.
+  - (comm, pkg-tls.c) New interactive_t flag 'outgoing_conn' is TRUE for
+      connections openened by net_connect(). This is used by TLS (OpenSSL)
+      to set the proper state for the session.
+  - (slaballoc.c, smalloc.c) When using brk() for core allocation, the
+      returned memory address was one word too low.
 ")
 (New-Version-Log 
 ""
 )
-(Checkin-Time "Wed, 09 Feb 2005 22:38:10 -0700")
+(Checkin-Time "Sat, 12 Feb 2005 00:29:18 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -106,8 +108,8 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.12 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.85 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.732 644))
-  (HISTORY (lpmud/f/49_HISTORY 1.385.1.15 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.733 644))
+  (HISTORY (lpmud/f/49_HISTORY 1.385.1.16 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.21 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
@@ -177,8 +179,8 @@
   (src/call_out.c (lpmud/d/5_call_out.c 1.34.1.32 644))
   (src/closure.h (lpmud/f/44_closure.h 1.7.1.22.1.3 644))
   (src/closure.c (lpmud/d/4_closure.c 1.41.1.47.1.26.1.5 644))
-  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.107 644))
-  (src/comm.h (lpmud/d/3_comm.h 1.26.1.42 644))
+  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.108 644))
+  (src/comm.h (lpmud/d/3_comm.h 1.26.1.43 644))
   (src/driver.h (lpmud/f/36_driver.h 1.15.1.28 644))
   (src/dumpstat.h (lpmud/f/35_dumpstat.h 1.8 644))
   (src/dumpstat.c (lpmud/c/34_dumpstat.c 1.20.1.11.1.8 644))
@@ -200,7 +202,7 @@
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.41 644))
   (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.88 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.15.1.13 644))
-  (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.74.1.6 644))
+  (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.74.1.7 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.19 644))
   (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.70 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.20 644))
@@ -212,7 +214,7 @@
   (src/mregex.h (lpmud/e/29_rxcache.h 1.7.1.16 644))
   (src/mregex.c (lpmud/e/30_rxcache.c 1.11.1.44 644))
   (src/mstrings.h (lpmud/i/35_mstrings.h 1.29 644))
-  (src/mstrings.c (lpmud/i/36_mstrings.c 1.21.1.35 644))
+  (src/mstrings.c (lpmud/i/36_mstrings.c 1.21.1.36 644))
   (src/my-alloca.h (lpmud/f/29_my-alloca. 1.3.1.2 644))
   (src/my-rusage.h (lpmud/f/28_my-rusage. 1.7 644))
   (src/my-stdint.h (lpmud/u/b/39_my-stdint. 1.2 644))
@@ -325,7 +327,7 @@
   (src/pkg-pgsql.c (lpmud/d/b/39_pkg-pgsql. 1.4 644))
   (src/pkg-pgsql.h (lpmud/d/b/40_pkg-pgsql. 1.2 644))
   (src/pkg-tls.h (lpmud/e/b/10_pkg-tls.h 1.7 644))
-  (src/pkg-tls.c (lpmud/e/b/11_pkg-tls.c 1.17 644))
+  (src/pkg-tls.c (lpmud/e/b/11_pkg-tls.c 1.18 644))
   (src/port.h (lpmud/38_port.h 1.30.1.4.1.20 644))
   (src/port.c (lpmud/39_port.c 1.17.1.9 644))
   (src/prolang.h (lpmud/f/19_prolang.h 1.17.1.5 644))
@@ -344,9 +346,9 @@
   (src/simulate.h (lpmud/f/16_simulate.h 1.25.1.39 644))
   (src/simulate.c (lpmud/31_simulate.c 1.88.1.135.1.8 644))
   (src/slaballoc.h (lpmud/d/c/16_slaballoc. 1.2 644))
-  (src/slaballoc.c (lpmud/d/c/17_slaballoc. 1.3 644))
+  (src/slaballoc.c (lpmud/d/c/17_slaballoc. 1.4 644))
   (src/smalloc.h (lpmud/29_smalloc.h 1.16.1.16 644))
-  (src/smalloc.c (lpmud/30_smalloc.c 1.31.1.109 644))
+  (src/smalloc.c (lpmud/30_smalloc.c 1.31.1.110 644))
   (src/sysmalloc.h (lpmud/c/b/33_sysmalloc. 1.2 644))
   (src/sysmalloc.c (lpmud/c/b/34_sysmalloc. 1.7 644))
   (src/sprintf.h (lpmud/f/15_sprintf.h 1.3.1.4 644))
@@ -622,7 +624,7 @@
   (doc/driver/invocation (lpmud/f/38_invocation 1.14.1.18 644))
   (doc/driver/malloc (lpmud/n/45_malloc 1.3 644))
   (doc/driver/opcdump (lpmud/n/46_opcdump 1.3 644))
-  (doc/driver/predefined (lpmud/h/8_predefined 1.12.1.24 644))
+  (doc/driver/predefined (lpmud/h/8_predefined 1.12.1.25 644))
   (doc/driver/showsmallnewmalloced (lpmud/n/47_showsmalln 1.5 644))
   (doc/driver/status (lpmud/n/48_status 1.3 644))
 
