@@ -878,6 +878,8 @@ init_lexer(void)
     add_permanent_define("__FLOAT_MAX__", -1, string_copy(mtext), MY_FALSE);
     sprintf(mtext, "(%g)", DBL_MIN);
     add_permanent_define("__FLOAT_MIN__", -1, string_copy(mtext), MY_FALSE);
+    sprintf(mtext, "%ld", get_current_time());
+    add_permanent_define("__BOOT_TIME__", -1, string_copy(mtext), MY_FALSE);
 
     /* Add the permanent macro definitions given on the commandline */
 
